// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GridItem /> set the "id" prop on the Dom element 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j"
    id="hasId"
  />
</div>
`;

exports[`<GridItem /> spread the "attrs" prop on the Dom element 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j"
    id={null}
    tabIndex="-1"
  />
</div>
`;

exports[`<GridItem /> styles apply correct default rule styles 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct default rule styles 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{-webkit-flex-basis:auto}
.htz-c{flex-basis:auto}
.htz-d{-webkit-flex-grow:1}
.htz-e{flex-grow:1}
.htz-f{-webkit-flex-shrink:1}
.htz-g{flex-shrink:1}
.htz-h{list-style:none}
.htz-i{padding-left:0rem}
.htz-j{padding-right:0rem}"
`;

exports[`<GridItem /> styles apply correct gutter styles 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct gutter styles 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{-webkit-flex-basis:auto}
.htz-c{flex-basis:auto}
.htz-d{-webkit-flex-grow:1}
.htz-e{flex-grow:1}
.htz-f{-webkit-flex-shrink:1}
.htz-g{flex-shrink:1}
.htz-h{list-style:none}
.htz-i{padding-left:4rem}
.htz-j{padding-right:4rem}"
`;

exports[`<GridItem /> styles apply correct offset styles 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j htz-k"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct offset styles 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{-webkit-flex-basis:auto}
.htz-c{flex-basis:auto}
.htz-d{-webkit-flex-grow:1}
.htz-e{flex-grow:1}
.htz-f{-webkit-flex-shrink:1}
.htz-g{flex-shrink:1}
.htz-h{list-style:none}
.htz-i{padding-left:0rem}
.htz-j{padding-right:0rem}
.htz-k{margin-right:25%}"
`;

exports[`<GridItem /> styles apply correct rule styles when rule color is a string 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct rule styles when rule color is a string 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{-webkit-flex-basis:auto}
.htz-c{flex-basis:auto}
.htz-d{-webkit-flex-grow:1}
.htz-e{flex-grow:1}
.htz-f{-webkit-flex-shrink:1}
.htz-g{flex-shrink:1}
.htz-h{list-style:none}
.htz-i{padding-left:0rem}
.htz-j{padding-right:0rem}"
`;

exports[`<GridItem /> styles apply correct rule styles when ruleWidth is even 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct rule styles when ruleWidth is even 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{-webkit-flex-basis:auto}
.htz-c{flex-basis:auto}
.htz-d{-webkit-flex-grow:1}
.htz-e{flex-grow:1}
.htz-f{-webkit-flex-shrink:1}
.htz-g{flex-shrink:1}
.htz-h{list-style:none}
.htz-i{padding-left:0rem}
.htz-j{padding-right:0rem}"
`;

exports[`<GridItem /> styles apply correct rule styles when ruleWidth is odd 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct rule styles when ruleWidth is odd 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{-webkit-flex-basis:auto}
.htz-c{flex-basis:auto}
.htz-d{-webkit-flex-grow:1}
.htz-e{flex-grow:1}
.htz-f{-webkit-flex-shrink:1}
.htz-g{flex-shrink:1}
.htz-h{list-style:none}
.htz-i{padding-left:0rem}
.htz-j{padding-right:0rem}"
`;

exports[`<GridItem /> styles apply correct width styles (fixed width) 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct width styles (fixed width) 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{-webkit-flex-basis:20rem}
.htz-c{flex-basis:20rem}
.htz-d{-webkit-flex-grow:0}
.htz-e{flex-grow:0}
.htz-f{-webkit-flex-shrink:0}
.htz-g{flex-shrink:0}
.htz-h{list-style:none}
.htz-i{padding-left:0rem}
.htz-j{padding-right:0rem}"
`;

exports[`<GridItem /> styles apply correct width styles (relative width) 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles apply correct width styles (relative width) 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{-webkit-flex-basis:25%}
.htz-c{flex-basis:25%}
.htz-d{-webkit-flex-grow:0}
.htz-e{flex-grow:0}
.htz-f{-webkit-flex-shrink:0}
.htz-g{flex-shrink:0}
.htz-h{list-style:none}
.htz-i{padding-left:0rem}
.htz-j{padding-right:0rem}"
`;

exports[`<GridItem /> styles create correct default styels 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles create correct default styels 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{-webkit-flex-basis:auto}
.htz-c{flex-basis:auto}
.htz-d{-webkit-flex-grow:1}
.htz-e{flex-grow:1}
.htz-f{-webkit-flex-shrink:1}
.htz-g{flex-shrink:1}
.htz-h{list-style:none}
.htz-i{padding-left:0rem}
.htz-j{padding-right:0rem}"
`;

exports[`<GridItem /> styles set misc styles correctly 1`] = `
<div>
  <div
    className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i htz-j htz-k"
    id={null}
  />
</div>
`;

exports[`<GridItem /> styles set misc styles correctly 2`] = `
"
.htz-a{box-sizing:border-box}
.htz-b{-webkit-flex-basis:auto}
.htz-c{flex-basis:auto}
.htz-d{-webkit-flex-grow:1}
.htz-e{flex-grow:1}
.htz-f{-webkit-flex-shrink:1}
.htz-g{flex-shrink:1}
.htz-h{list-style:none}
.htz-i{padding-left:0rem}
.htz-j{padding-right:0rem}
.htz-k{background-color:red}"
`;
